--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "Adds information about the advertiser to the banner",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xervin/advert-info.git"
+  },
   "scripts": {
     "start": "webpack serve",
     "dev": "webpack serve --mode development",
@@ -18,6 +22,10 @@
   ],
   "author": "Rulyov Alexander",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xervin/advert-info/issues"
+  },
+  "homepage": "https://github.com/xervin/advert-info#readme",
   "devDependencies": {
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
